--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:34:50 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:35:33 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -524,6 +524,22 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-1</td>
+      <td>Hideki Matsuyama -2
+-2 thru 9</td>
+      <td>Cameron Smith -1
++3 thru 10</td>
+      <td>Justin Thomas +1
+-3 thru 9</td>
+      <td>Tiger Woods +1
++2 thru 10</td>
+      <td class="greyout leftborder">Rory McIlroy(W) +2
++1 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler -4
@@ -572,6 +588,22 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">0</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Tiger Woods(W) +1
++2 thru 10</td>
+      <td>Justin Thomas +1
+-3 thru 9</td>
+      <td class="greyout leftborder">Rory McIlroy +2
++1 (F)</td>
+      <td class="greyout">Viktor Hovland +4
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Baggy Pants</td>
       <td class="bigbold">0</td>
       <td>Shane Lowry -1
@@ -586,22 +618,6 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">0</td>
-      <td>Hideki Matsuyama -2
--2 thru 9</td>
-      <td>Cameron Smith -1
-+3 thru 10</td>
-      <td>Justin Thomas +1
--3 thru 9</td>
-      <td>Rory McIlroy(W) +2
-+1 (F)</td>
-      <td class="greyout leftborder">Tiger Woods +2
-+3 thru 9</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -632,6 +648,22 @@ E (F)</td>
 E (F)</td>
       <td class="greyout leftborder">Viktor Hovland(W) +4
 +4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">1</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Cameron Smith -1
++3 thru 10</td>
+      <td>Tiger Woods +1
++2 thru 10</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -668,22 +700,6 @@ E (F)</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">1</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Justin Thomas +1
--3 thru 9</td>
-      <td>Tiger Woods(W) +2
-+3 thru 9</td>
-      <td class="greyout leftborder">Rory McIlroy +2
-+1 (F)</td>
-      <td class="greyout">Viktor Hovland +4
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">1</td>
       <td>Corey Conners -1
@@ -714,22 +730,6 @@ E (F)</td>
 +3 (F)</td>
       <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">2</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Cameron Smith -1
-+3 thru 10</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td>Tiger Woods +2
-+3 thru 9</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
@@ -780,6 +780,22 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">3</td>
+      <td>Collin Morikawa(W) -1
+-2 (F)</td>
+      <td>Justin Thomas +1
+-3 thru 9</td>
+      <td>Tiger Woods +1
++2 thru 10</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Gary Woodland +8
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">3</td>
       <td>Cameron Smith(W) -1
@@ -825,22 +841,6 @@ E (F)</td>
       <td class="greyout leftborder">Brooks Koepka +6
 +3 (F)</td>
       <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">4</td>
-      <td>Collin Morikawa(W) -1
--2 (F)</td>
-      <td>Justin Thomas +1
--3 thru 9</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td>Tiger Woods +2
-+3 thru 9</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Gary Woodland +8
 +5 (F)</td>
     </tr>
     <tr>
