--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:36:16 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:36:59 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -237,13 +237,13 @@ E thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-1</td>
       <td>Joaquin Niemann -2
 +1 thru 10</td>
       <td>Cameron Smith -1
 +3 thru 10</td>
-      <td>Tommy Fleetwood(W) E
--3 thru 10</td>
+      <td>Tommy Fleetwood(W) +1
+-2 thru 11</td>
       <td>Justin Thomas +1
 -3 thru 9</td>
       <td class="greyout leftborder">Rory McIlroy +2
