--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:44:09 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:44:52 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -572,6 +572,22 @@ E (F)</td>
 Out With Injury</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners(W) -1
++1 (F)</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Daniel Berger E
++1 thru 12</td>
+      <td>Robert MacIntyre +2
++1 (F)</td>
+      <td class="greyout leftborder">Jon Rahm +2
+E (F)</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">New Lu</td>
       <td class="bigbold">0</td>
       <td>Cameron Smith -1
@@ -666,22 +682,6 @@ E (F)</td>
 +2 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">1</td>
-      <td>Corey Conners(W) -1
-+1 (F)</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Daniel Berger +1
-+2 thru 11</td>
-      <td>Robert MacIntyre +2
-+1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">BCREAMED</td>
@@ -812,6 +812,22 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">4</td>
+      <td>Daniel Berger E
++1 thru 12</td>
+      <td>Justin Thomas(W) +1
+-3 thru 9</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Jon Rahm +2
+E (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Philip Dale</td>
       <td class="bigbold">4</td>
       <td>Scottie Scheffler -4
@@ -890,22 +906,6 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">5</td>
-      <td>Justin Thomas(W) +1
--3 thru 9</td>
-      <td>Daniel Berger +1
-+2 thru 11</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Jon Rahm +2
-E (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
