--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:44:09 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:44:52 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -188,6 +188,22 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-3</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Tony Finau -1
+E thru 9</td>
+      <td>Daniel Berger E
++1 thru 12</td>
+      <td class="greyout leftborder">Justin Thomas(W) +1
+-3 thru 9</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-3</td>
       <td>Shane Lowry -1
@@ -216,22 +232,6 @@ E (F)</td>
 +3 (F)</td>
       <td class="greyout leftborder">Viktor Hovland(W) +4
 +4 (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-2</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Tony Finau -1
-E thru 9</td>
-      <td>Justin Thomas(W) +1
--3 thru 9</td>
-      <td class="greyout leftborder">Daniel Berger +1
-+2 thru 11</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
     </tr>
@@ -266,6 +266,22 @@ E thru 9</td>
 E (F)</td>
       <td class="greyout">Tyrrell Hatton +2
 +2 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners(W) -1
++1 (F)</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Daniel Berger E
++1 thru 12</td>
+      <td>Jon Rahm +2
+E (F)</td>
+      <td class="greyout leftborder">Robert MacIntyre +2
++1 (F)</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -314,22 +330,6 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">1</td>
-      <td>Corey Conners(W) -1
-+1 (F)</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Daniel Berger +1
-+2 thru 11</td>
-      <td>Jon Rahm +2
-E (F)</td>
-      <td class="greyout leftborder">Robert MacIntyre +2
-+1 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
