--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:45:35 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:46:18 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -170,22 +170,6 @@ E (F)</td>
 -3 thru 9</td>
       <td class="greyout">Patrick Cantlay +1
 +3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Luke Watson</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -4
--1 thru 9</td>
-      <td>Cameron Smith(W) -1
-+3 thru 11</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Talor Gooch -1
--1 thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -232,6 +216,22 @@ E (F)</td>
 E (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
 +4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Luke Watson</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler -4
+-1 thru 9</td>
+      <td>Cameron Smith(W) -1
++3 thru 11</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Talor Gooch E
+E thru 13</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -316,22 +316,6 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">-5</td>
-      <td>Hideki Matsuyama -2
--2 thru 9</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Talor Gooch -1
--1 thru 12</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-E (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-5</td>
       <td>Dustin Johnson(W) -2
@@ -394,6 +378,22 @@ E thru 9</td>
 +4 (F)</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">-4</td>
+      <td>Hideki Matsuyama -2
+-2 thru 9</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Cameron Smith -1
++3 thru 11</td>
+      <td>Talor Gooch E
+E thru 13</td>
+      <td class="greyout leftborder">Jon Rahm(W) +2
+E (F)</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
