--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:47:01 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:47:44 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -166,10 +166,10 @@ E thru 9</td>
 -2 thru 12</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
--3 thru 9</td>
-      <td class="greyout">Patrick Cantlay +1
+      <td class="greyout leftborder">Patrick Cantlay +1
 +3 (F)</td>
+      <td class="greyout">Justin Thomas(W) +2
+-2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -300,22 +300,6 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler -4
--1 thru 9</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Shane Lowry -1
--2 thru 12</td>
-      <td>Justin Thomas(W) +1
--3 thru 9</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-5</td>
       <td>Dustin Johnson(W) -2
@@ -380,6 +364,22 @@ E thru 9</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler -4
+-1 thru 9</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Shane Lowry -1
+-2 thru 12</td>
+      <td>Justin Thomas(W) +2
+-2 thru 10</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Ron Harrington</td>
       <td class="bigbold">-4</td>
       <td>Hideki Matsuyama -2
@@ -412,22 +412,6 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-3</td>
-      <td>Hideki Matsuyama -2
--2 thru 9</td>
-      <td>Cameron Smith(W) -1
-+3 thru 11</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Justin Thomas +1
--3 thru 9</td>
-      <td class="greyout leftborder">Marc Leishman +4
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-3</td>
       <td>Shane Lowry -1
@@ -438,8 +422,8 @@ E (F)</td>
 E (F)</td>
       <td>Matthew Fitzpatrick E
 +1 (F)</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
--3 thru 9</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
+-2 thru 10</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
     </tr>
@@ -492,6 +476,22 @@ E (F)</td>
 +2 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Bill Hunter</td>
+      <td class="bigbold">-2</td>
+      <td>Hideki Matsuyama -2
+-2 thru 9</td>
+      <td>Cameron Smith(W) -1
++3 thru 11</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Justin Thomas +2
+-2 thru 10</td>
+      <td class="greyout leftborder">Marc Leishman +4
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners(W) -1
@@ -521,38 +521,6 @@ E (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 (F)</td>
       <td class="greyout">Xander Schauffele(W) +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-1</td>
-      <td>Hideki Matsuyama -2
--2 thru 9</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
-      <td>Justin Thomas +1
--3 thru 9</td>
-      <td>Tiger Woods +1
-+2 thru 10</td>
-      <td class="greyout leftborder">Rory McIlroy(W) +2
-+1 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler -4
--1 thru 9</td>
-      <td>Justin Thomas(W) +1
--3 thru 9</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
     <tr>
@@ -588,52 +556,20 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">New Lu</td>
+      <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">0</td>
+      <td>Hideki Matsuyama -2
+-2 thru 9</td>
       <td>Cameron Smith -1
 +3 thru 11</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Justin Thomas(W) +1
--3 thru 9</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
+      <td>Tiger Woods +1
++2 thru 10</td>
+      <td>Rory McIlroy(W) +2
++1 (F)</td>
+      <td class="greyout leftborder">Justin Thomas +2
+-2 thru 10</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">0</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Tiger Woods(W) +1
-+2 thru 10</td>
-      <td>Justin Thomas +1
--3 thru 9</td>
-      <td class="greyout leftborder">Rory McIlroy +2
-+1 (F)</td>
-      <td class="greyout">Viktor Hovland +4
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">0</td>
-      <td>Shane Lowry -1
--2 thru 12</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
-      <td>Justin Thomas(W) +1
--3 thru 9</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -650,6 +586,22 @@ E (F)</td>
 +2 (F)</td>
       <td class="greyout">Brian Harman +5
 +3 thru 15</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">1</td>
+      <td>Scottie Scheffler -4
+-1 thru 9</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Justin Thomas(W) +2
+-2 thru 10</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -700,18 +652,50 @@ E (F)</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jabby</td>
+      <td class="bigbold">New Lu</td>
       <td class="bigbold">1</td>
-      <td>Corey Conners -1
-+1 (F)</td>
+      <td>Cameron Smith -1
++3 thru 11</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Justin Thomas(W) +1
--3 thru 9</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Justin Thomas(W) +2
+-2 thru 10</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">1</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Tiger Woods(W) +1
++2 thru 10</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E (F)</td>
+      <td class="greyout leftborder">Justin Thomas +2
+-2 thru 10</td>
+      <td class="greyout">Viktor Hovland +4
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">1</td>
+      <td>Shane Lowry -1
+-2 thru 12</td>
+      <td>Cameron Smith -1
++3 thru 11</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Justin Thomas(W) +2
+-2 thru 10</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
     </tr>
@@ -732,36 +716,20 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">Jabby</td>
       <td class="bigbold">2</td>
-      <td>Hideki Matsuyama -2
--2 thru 9</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Justin Thomas +1
--3 thru 9</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wylie</td>
-      <td class="bigbold">2</td>
-      <td>Scottie Scheffler -4
--1 thru 9</td>
+      <td>Corey Conners -1
++1 (F)</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Justin Thomas(W) +1
--3 thru 9</td>
-      <td>Brooks Koepka +6
+      <td>Justin Thomas(W) +2
+-2 thru 10</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td class="greyout leftborder">Jon Rahm +2
+E (F)</td>
+      <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele +7
-+5 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
@@ -780,68 +748,36 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">3</td>
-      <td>Collin Morikawa(W) -1
--2 (F)</td>
-      <td>Justin Thomas +1
--3 thru 9</td>
-      <td>Tiger Woods +1
-+2 thru 10</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Gary Woodland +8
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">3</td>
-      <td>Cameron Smith(W) -1
-+3 thru 11</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Justin Thomas +1
--3 thru 9</td>
-      <td>Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">4</td>
-      <td>Daniel Berger E
-+1 thru 12</td>
-      <td>Justin Thomas(W) +1
--3 thru 9</td>
+      <td>Hideki Matsuyama -2
+-2 thru 9</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
-      <td>Jon Rahm +2
+      <td>Jon Rahm(W) +2
 E (F)</td>
-      <td class="greyout leftborder">Viktor Hovland +4
+      <td>Justin Thomas +2
+-2 thru 10</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Philip Dale</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">Wylie</td>
+      <td class="bigbold">3</td>
       <td>Scottie Scheffler -4
 -1 thru 9</td>
-      <td>Justin Thomas(W) +1
--3 thru 9</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Justin Thomas(W) +2
+-2 thru 10</td>
       <td>Brooks Koepka +6
 +3 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
+      <td class="greyout leftborder">Xander Schauffele +7
 +5 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Barb Wellard</td>
@@ -860,16 +796,32 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">4</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Justin Thomas +1
--3 thru 9</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
+      <td>Collin Morikawa(W) -1
+-2 (F)</td>
+      <td>Tiger Woods +1
++2 thru 10</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
+      <td>Justin Thomas +2
+-2 thru 10</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Gary Woodland +8
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">4</td>
+      <td>Cameron Smith(W) -1
++3 thru 11</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Justin Thomas +2
+-2 thru 10</td>
+      <td>Viktor Hovland +4
++4 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
@@ -908,6 +860,54 @@ E (F)</td>
 +3 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">5</td>
+      <td>Daniel Berger E
++1 thru 12</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Justin Thomas(W) +2
+-2 thru 10</td>
+      <td>Jon Rahm +2
+E (F)</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Philip Dale</td>
+      <td class="bigbold">5</td>
+      <td>Scottie Scheffler -4
+-1 thru 9</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Justin Thomas(W) +2
+-2 thru 10</td>
+      <td>Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">5</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td>Justin Thomas +2
+-2 thru 10</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">5</td>
       <td>Cameron Smith -1
@@ -941,11 +941,11 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">7</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Justin Thomas(W) +1
--3 thru 9</td>
+      <td>Justin Thomas(W) +2
+-2 thru 10</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Viktor Hovland +4
@@ -957,13 +957,13 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">7</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Justin Thomas +1
--3 thru 9</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
+      <td>Justin Thomas +2
+-2 thru 10</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
       <td class="greyout leftborder">Brooks Koepka +6
@@ -973,15 +973,15 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">7</td>
       <td>Patrick Cantlay(W) +1
 +3 (F)</td>
-      <td>Justin Thomas +1
--3 thru 9</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
       <td>Jon Rahm +2
 E (F)</td>
+      <td>Justin Thomas +2
+-2 thru 10</td>
       <td class="greyout leftborder">Brooks Koepka +6
 +3 (F)</td>
       <td class="greyout">Xander Schauffele +7
@@ -989,35 +989,19 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">8</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
-      <td>Justin Thomas(W) +1
--3 thru 9</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
+      <td>Justin Thomas(W) +2
+-2 thru 10</td>
       <td>Brooks Koepka +6
 +3 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Benjac</td>
-      <td class="bigbold">7</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
-      <td>Justin Thomas(W) +1
--3 thru 9</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td>Sam Burns +5
-+2 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele +7
-+5 (F)</td>
-      <td class="greyout">Justin Rose +8
-+4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -1052,12 +1036,28 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Benjac</td>
+      <td class="bigbold">8</td>
+      <td>Cameron Smith -1
++3 thru 11</td>
+      <td>Justin Thomas(W) +2
+-2 thru 10</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td>Sam Burns +5
++2 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele +7
++5 (F)</td>
+      <td class="greyout">Justin Rose +8
++4 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">13</td>
-      <td>Justin Thomas +1
--3 thru 9</td>
+      <td class="bigbold">14</td>
       <td>Jon Rahm(W) +2
 E (F)</td>
+      <td>Justin Thomas +2
+-2 thru 10</td>
       <td>Viktor Hovland +4
 +4 (F)</td>
       <td>Brooks Koepka +6
@@ -1069,9 +1069,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">13</td>
-      <td>Justin Thomas(W) +1
--3 thru 9</td>
+      <td class="bigbold">14</td>
+      <td>Justin Thomas(W) +2
+-2 thru 10</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Viktor Hovland +4
@@ -1085,9 +1085,9 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">13</td>
-      <td>Justin Thomas(W) +1
--3 thru 9</td>
+      <td class="bigbold">14</td>
+      <td>Justin Thomas(W) +2
+-2 thru 10</td>
       <td>Jon Rahm +2
 E (F)</td>
       <td>Viktor Hovland +4
