--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:53:28 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:54:11 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -588,22 +588,6 @@ E (F)</td>
 +3 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">0</td>
-      <td>Hideki Matsuyama -2
--2 thru 10</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
-      <td>Tiger Woods +1
-+2 thru 10</td>
-      <td>Rory McIlroy(W) +2
-+1 (F)</td>
-      <td class="greyout leftborder">Justin Thomas +2
--2 thru 10</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">1</td>
       <td>Scottie Scheffler -4
@@ -632,22 +616,6 @@ E (F)</td>
 E (F)</td>
       <td class="greyout leftborder">Viktor Hovland(W) +4
 +4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">1</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Cameron Smith -1
-+3 thru 11</td>
-      <td>Tiger Woods +1
-+2 thru 10</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -684,20 +652,20 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">1</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Tiger Woods(W) +1
-+2 thru 10</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td class="greyout leftborder">Justin Thomas +2
+      <td>Hideki Matsuyama -2
 -2 thru 10</td>
-      <td class="greyout">Viktor Hovland +4
-+4 (F)</td>
+      <td>Cameron Smith -1
++3 thru 11</td>
+      <td>Rory McIlroy(W) +2
++1 (F)</td>
+      <td>Justin Thomas +2
+-2 thru 10</td>
+      <td class="greyout leftborder">Tiger Woods +2
++3 thru 11</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -713,6 +681,38 @@ E (F)</td>
       <td class="greyout leftborder">Brooks Koepka +6
 +3 (F)</td>
       <td class="greyout">Jordan Spieth +6
++4 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">2</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Cameron Smith -1
++3 thru 11</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td>Tiger Woods +2
++3 thru 11</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">2</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Tiger Woods(W) +2
++3 thru 11</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td class="greyout leftborder">Justin Thomas +2
+-2 thru 10</td>
+      <td class="greyout">Viktor Hovland +4
 +4 (F)</td>
     </tr>
     <tr>
@@ -796,22 +796,6 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">4</td>
-      <td>Collin Morikawa(W) -1
--2 (F)</td>
-      <td>Tiger Woods +1
-+2 thru 10</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td>Justin Thomas +2
--2 thru 10</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Gary Woodland +8
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">4</td>
       <td>Cameron Smith(W) -1
@@ -889,6 +873,22 @@ E (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">5</td>
+      <td>Collin Morikawa(W) -1
+-2 (F)</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td>Justin Thomas +2
+-2 thru 10</td>
+      <td>Tiger Woods +2
++3 thru 11</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Gary Woodland +8
 +5 (F)</td>
     </tr>
     <tr>
