--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:59:12 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 4:59:55 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -217,22 +217,6 @@ E (F)</td>
       <td class="greyout leftborder">Viktor Hovland +4
 +4 (F)</td>
       <td class="greyout">Xander Schauffele(W) +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler -4
--1 thru 9</td>
-      <td>Dustin Johnson -2
-+1 (F)</td>
-      <td>Adam Scott E
--2 thru 9</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka(W) +6
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
     <tr>
@@ -346,6 +330,22 @@ Missed Cut</td>
 +3 (F)</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler -4
+-1 thru 9</td>
+      <td>Dustin Johnson -2
++1 (F)</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Adam Scott +1
+-1 thru 10</td>
+      <td class="greyout leftborder">Brooks Koepka(W) +6
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
