--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:00:38 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:01:21 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-7</td>
       <td>Scottie Scheffler -4
 -1 thru 9</td>
       <td>Shane Lowry -2
 -3 thru 13</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Tony Finau -1
-E thru 9</td>
+      <td>Tony Finau E
++1 thru 10</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 +3 (F)</td>
       <td class="greyout">Justin Thomas(W) +2
@@ -170,22 +170,6 @@ E (F)</td>
 +3 (F)</td>
       <td class="greyout">Jordan Spieth +6
 +4 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-3</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Tony Finau -1
-E thru 9</td>
-      <td>Daniel Berger E
-+1 thru 12</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 10</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -218,6 +202,22 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-2</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Will Zalatoris -1
+E (F)</td>
+      <td>Tony Finau E
++1 thru 10</td>
+      <td>Daniel Berger E
++1 thru 12</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
+-2 thru 10</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -284,22 +284,6 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">1</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Tony Finau -1
-E thru 9</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">2</td>
       <td>Dustin Johnson -2
@@ -330,6 +314,22 @@ Missed Cut</td>
 +3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">2</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Tony Finau E
++1 thru 10</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
