--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:00:38 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:01:21 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -157,15 +157,15 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-7</td>
       <td>Scottie Scheffler -4
 -1 thru 9</td>
       <td>Shane Lowry -2
 -3 thru 13</td>
-      <td>Tony Finau -1
-E thru 9</td>
       <td>Will Zalatoris -1
 E (F)</td>
+      <td>Tony Finau E
++1 thru 10</td>
       <td class="greyout leftborder">Patrick Cantlay +1
 +3 (F)</td>
       <td class="greyout">Justin Thomas(W) +2
@@ -284,22 +284,6 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">-5</td>
-      <td>Dustin Johnson(W) -2
-+1 (F)</td>
-      <td>Shane Lowry -2
--3 thru 13</td>
-      <td>Tony Finau -1
-E thru 9</td>
-      <td>Matthew Fitzpatrick E
-+1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth +6
-+4 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
       <td class="bigbold">-5</td>
       <td>Scottie Scheffler -4
@@ -362,6 +346,22 @@ Missed Cut</td>
 +1 (F)</td>
       <td class="greyout">Jon Rahm +2
 E (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">-4</td>
+      <td>Dustin Johnson(W) -2
++1 (F)</td>
+      <td>Shane Lowry -2
+-3 thru 13</td>
+      <td>Tony Finau E
++1 thru 10</td>
+      <td>Matthew Fitzpatrick E
++1 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth +6
++4 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
@@ -620,22 +620,6 @@ E (F)</td>
 +3 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">1</td>
-      <td>Tony Finau -1
-E thru 9</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Patrick Cantlay +1
-+3 (F)</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">BCREAMED</td>
       <td class="bigbold">2</td>
       <td>Scottie Scheffler -4
@@ -714,6 +698,22 @@ E (F)</td>
 +3 thru 11</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">2</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Tony Finau E
++1 thru 10</td>
+      <td>Patrick Cantlay +1
++3 (F)</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
