--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:06:22 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:07:05 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -460,6 +460,22 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">-2</td>
+      <td>Joaquin Niemann -3
+E thru 12</td>
+      <td>Shane Lowry(W) -2
+-3 thru 13</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 (F)</td>
+      <td class="greyout">Brian Harman +5
++3 thru 16</td>
+    </tr>
+    <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
@@ -522,22 +538,6 @@ E (F)</td>
 +3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">-1</td>
-      <td>Shane Lowry(W) -2
--3 thru 13</td>
-      <td>Joaquin Niemann -2
-+1 thru 11</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 (F)</td>
-      <td class="greyout">Brian Harman +5
-+3 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -796,6 +796,22 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Barb Wellard</td>
+      <td class="bigbold">4</td>
+      <td>Joaquin Niemann -3
+E thru 12</td>
+      <td>Cameron Smith E
++4 thru 12</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td>Sam Burns +5
++2 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">4</td>
       <td>Scottie Scheffler -4
@@ -840,22 +856,6 @@ E (F)</td>
 +3 (F)</td>
       <td class="greyout leftborder">Jordan Spieth +6
 +4 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Barb Wellard</td>
-      <td class="bigbold">5</td>
-      <td>Joaquin Niemann -2
-+1 thru 11</td>
-      <td>Cameron Smith E
-+4 thru 12</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td>Sam Burns +5
-+2 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
