--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:06:22 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:07:05 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -269,9 +269,9 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">1</td>
-      <td>Joaquin Niemann -2
-+1 thru 11</td>
+      <td class="bigbold">0</td>
+      <td>Joaquin Niemann -3
+E thru 12</td>
       <td>Cameron Smith E
 +4 thru 12</td>
       <td>Tommy Fleetwood(W) +1
