--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:07:05 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:07:48 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -145,7 +145,7 @@ body {
       <td>Scottie Scheffler(W) -4
 -1 thru 10</td>
       <td>Hideki Matsuyama -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Will Zalatoris -1
 E (F)</td>
       <td>Cameron Smith E
@@ -273,7 +273,7 @@ E thru 14</td>
       <td>Shane Lowry -2
 -3 thru 13</td>
       <td>Hideki Matsuyama -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Cameron Smith(W) E
@@ -399,7 +399,7 @@ E (F)</td>
       <td class="bigbold">Ron Harrington</td>
       <td class="bigbold">-3</td>
       <td>Hideki Matsuyama -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Talor Gooch E
@@ -527,7 +527,7 @@ E (F)</td>
       <td class="bigbold">Bill Hunter</td>
       <td class="bigbold">-1</td>
       <td>Hideki Matsuyama -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Cameron Smith(W) E
@@ -559,7 +559,7 @@ E (F)</td>
       <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">0</td>
       <td>Hideki Matsuyama -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Collin Morikawa(W) -1
 -2 (F)</td>
       <td>Patrick Cantlay +1
@@ -658,12 +658,12 @@ E (F)</td>
 -2 (F)</td>
       <td>Will Zalatoris -1
 E (F)</td>
-      <td>Tiger Woods(W) +2
-+3 thru 11</td>
       <td>Rory McIlroy +2
 +1 (F)</td>
-      <td class="greyout leftborder">Justin Thomas +2
+      <td>Justin Thomas +2
 -2 thru 10</td>
+      <td class="greyout leftborder">Tiger Woods(W) +3
++4 thru 12</td>
       <td class="greyout">Viktor Hovland +4
 +4 (F)</td>
     </tr>
@@ -687,15 +687,15 @@ E (F)</td>
       <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">2</td>
       <td>Hideki Matsuyama -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Cameron Smith E
 +4 thru 12</td>
       <td>Rory McIlroy(W) +2
 +1 (F)</td>
       <td>Justin Thomas +2
 -2 thru 10</td>
-      <td class="greyout leftborder">Tiger Woods +2
-+3 thru 11</td>
+      <td class="greyout leftborder">Tiger Woods +3
++4 thru 12</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
     </tr>
@@ -732,26 +732,10 @@ E (F)</td>
 +4 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">3</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Cameron Smith E
-+4 thru 12</td>
-      <td>Jon Rahm(W) +2
-E (F)</td>
-      <td>Tiger Woods +2
-+3 thru 11</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">3</td>
       <td>Hideki Matsuyama -2
--2 thru 10</td>
+-2 thru 11</td>
       <td>Patrick Cantlay +1
 +3 (F)</td>
       <td>Jon Rahm(W) +2
@@ -778,6 +762,22 @@ E (F)</td>
 +5 (F)</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">4</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Cameron Smith E
++4 thru 12</td>
+      <td>Jon Rahm(W) +2
+E (F)</td>
+      <td>Tiger Woods +3
++4 thru 12</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -860,22 +860,6 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">5</td>
-      <td>Collin Morikawa(W) -1
--2 (F)</td>
-      <td>Rory McIlroy +2
-+1 (F)</td>
-      <td>Justin Thomas +2
--2 thru 10</td>
-      <td>Tiger Woods +2
-+3 thru 11</td>
-      <td class="greyout leftborder">Viktor Hovland +4
-+4 (F)</td>
-      <td class="greyout">Gary Woodland +8
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">5</td>
       <td>Corey Conners -1
@@ -922,6 +906,22 @@ E (F)</td>
 +4 (F)</td>
       <td class="greyout">Brooks Koepka +6
 +3 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">6</td>
+      <td>Collin Morikawa(W) -1
+-2 (F)</td>
+      <td>Rory McIlroy +2
++1 (F)</td>
+      <td>Justin Thomas +2
+-2 thru 10</td>
+      <td>Tiger Woods +3
++4 thru 12</td>
+      <td class="greyout leftborder">Viktor Hovland +4
++4 (F)</td>
+      <td class="greyout">Gary Woodland +8
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
