--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:08:31 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:09:14 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -269,17 +269,17 @@ E (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Joaquin Niemann -3
 E thru 12</td>
       <td>Cameron Smith E
 +4 thru 12</td>
-      <td>Tommy Fleetwood(W) +1
--2 thru 12</td>
       <td>Justin Thomas +2
 -2 thru 11</td>
-      <td class="greyout leftborder">Rory McIlroy +2
+      <td>Rory McIlroy +2
 +1 (F)</td>
+      <td class="greyout leftborder">Tommy Fleetwood(W) +3
+E thru 13</td>
       <td class="greyout">Viktor Hovland +4
 +4 (F)</td>
     </tr>
