--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:21:25 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:22:08 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -236,22 +236,6 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Luke Watson</td>
-      <td class="bigbold">-5</td>
-      <td>Scottie Scheffler -4
--1 thru 10</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Cameron Smith(W) E
-+4 thru 12</td>
-      <td>Talor Gooch E
-E thru 14</td>
-      <td class="greyout leftborder">Brooks Koepka +6
-+3 (F)</td>
-      <td class="greyout">Xander Schauffele +7
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Team Steve</td>
       <td class="bigbold">-5</td>
       <td>Scottie Scheffler -4
@@ -332,6 +316,22 @@ Missed Cut</td>
 +5 (F)</td>
     </tr>
     <tr>
+      <td class="bigbold">Luke Watson</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler -4
+-1 thru 10</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Cameron Smith(W) E
++4 thru 12</td>
+      <td>Talor Gooch +1
++1 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka +6
++3 (F)</td>
+      <td class="greyout">Xander Schauffele +7
++5 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Roy Jeffrey B</td>
       <td class="bigbold">-4</td>
       <td>Scottie Scheffler(W) -4
@@ -396,22 +396,6 @@ E (F)</td>
 +3 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Ron Harrington</td>
-      <td class="bigbold">-3</td>
-      <td>Hideki Matsuyama -2
--2 thru 12</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Talor Gooch E
-E thru 14</td>
-      <td>Cameron Smith E
-+4 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-E (F)</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">The Dub</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler -4
@@ -458,6 +442,22 @@ E (F)</td>
 +3 (F)</td>
       <td class="greyout">Xander Schauffele +7
 +5 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">-2</td>
+      <td>Hideki Matsuyama -2
+-2 thru 12</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Cameron Smith E
++4 thru 12</td>
+      <td>Talor Gooch +1
++1 thru 15</td>
+      <td class="greyout leftborder">Jon Rahm(W) +2
+E (F)</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
