--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:25:00 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 5:25:43 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -204,22 +204,6 @@ E (F)</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-2</td>
-      <td>Collin Morikawa -1
--2 (F)</td>
-      <td>Will Zalatoris -1
-E (F)</td>
-      <td>Daniel Berger -1
-E thru 13</td>
-      <td>Tony Finau +1
-+2 thru 11</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
--2 thru 12</td>
-      <td class="greyout">Brooks Koepka +6
-+3 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-1</td>
       <td>Sungjae Im -3
@@ -236,20 +220,20 @@ E thru 13</td>
 +3 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-1</td>
-      <td>Corey Conners(W) -1
-+1 (F)</td>
       <td>Collin Morikawa -1
 -2 (F)</td>
-      <td>Daniel Berger -1
-E thru 13</td>
-      <td>Jon Rahm +2
+      <td>Will Zalatoris -1
 E (F)</td>
-      <td class="greyout leftborder">Robert MacIntyre +2
-+1 (F)</td>
-      <td class="greyout">Jordan Spieth +6
-+4 (F)</td>
+      <td>Daniel Berger E
++1 thru 14</td>
+      <td>Tony Finau +1
++2 thru 11</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
+-2 thru 12</td>
+      <td class="greyout">Brooks Koepka +6
++3 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -266,6 +250,22 @@ E (F)</td>
 E (F)</td>
       <td class="greyout">Tyrrell Hatton +2
 +2 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners(W) -1
++1 (F)</td>
+      <td>Collin Morikawa -1
+-2 (F)</td>
+      <td>Daniel Berger E
++1 thru 14</td>
+      <td>Jon Rahm +2
+E (F)</td>
+      <td class="greyout leftborder">Robert MacIntyre +2
++1 (F)</td>
+      <td class="greyout">Jordan Spieth +6
++4 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
